$Date$

VEGAN RELEASE VERSIONS at http://cran.r-project.org/

Version 2.0-5 (opened June 18, 2012)

Version 2.0-4 (released June 18, 2012)

	* merge r2215: plot.envfit() gains args 'bg' for background colour
	of labels.
	* cherry-pick from r2213: warn on empty rows in simper (picked
	github revision cce42b3).
	* merge r2206,7: check 'newdata' dims in predict(..., type =
	"response"|"working") for CA results.
	* merge r2195-7, 2204: bias adjusted betadisper.
	* merge r2191-2193: standardise handling of 'select' arg in
	those plotting functions that support it. Adds non-exported
	function .checkSelect().
	* merge r2182,2182,2199,2201: FAQ about data size in NMDS.
	* merge r2178, 2180: ordipointlabel gains 'select' argument.
	* merge r2173-2176, 2185: ordihull labels, semintransparent
	colours in ordihull & ordiellipse.
	* merge r2172,2179,2181,2184,2186,2187: metaMDS warns about too
	good stress.
	* merge r2170: bioenv accepts dissimilarities as input.
	* merge r2167: warn about unequal aspect ratio in ordiplot3d.
	* merge r2162: set equal axis scales for ordiplot3d.
	* merge r2157:2160,2167,2168,2208: ordiplot3d returns
	envfit.convert().
	* merge r2156: betadisper example adapted for default spatial
	median.
	* merge r2150: monoMDS checks that the number of dissimilarities
	is sufficient for the requested analysis. The decostand.Rd fix of
	r2150 was not yet merged.
	* merge r2149: drarefy & rrarefy check that input data are
	integers.
	* merge r2148 (partial): format references. However, scoverage()
	was not merged yet, and its changes have not been merged.
	* merge r2144: hiersimu and multipart do not assume constant
	gamma.  Similar change was made in r2132 to adipart.
	* merge r2143: formula method for adipart/hiersimu/multipart.
	NAMESPACE needed manual merge (edited patch from diff).
	* merge r2139: clamtest coverage threshold fix.
	* merge r2137: explain data transformation in pyrifos.Rd.
	* merge r2135: print.adipart displays null model method.