@@ -176,6 +176,8 @@ S3method(hiersimu, default)
 S3method(hiersimu, formula)
 # identify: graphics
 S3method(identify, ordiplot)
+# labels: base
+S3method(labels, envfit)
 # lines: graphics
 S3method(lines, humpfit)
 S3method(lines, permat)
