@@ -146,10 +146,10 @@ mite.hel <- decostand(mite, "hellinger")
 mite.hel.resid <- resid(lm(as.matrix(mite.hel) ~ ., data=mite.xy))
 
 # Compute the detrended species distance matrix
-mite.hel.D = dist(mite.hel.resid)
+mite.hel.D <- dist(mite.hel.resid)
 
 # Compute Mantel correlogram with cutoff, Pearson statistic
-mite.correlog = mantel.correlog(mite.hel.D, XY=mite.xy, nperm=49)
+mite.correlog <- mantel.correlog(mite.hel.D, XY=mite.xy, nperm=49)
 summary(mite.correlog)
 mite.correlog   
 # or: print(mite.correlog)
@@ -157,8 +157,8 @@ mite.correlog
 plot(mite.correlog)
 
 # Compute Mantel correlogram without cutoff, Spearman statistic
-mite.correlog2 = mantel.correlog(mite.hel.D, XY=mite.xy, cutoff=FALSE, 
-r.type="spearman", nperm=49)
+mite.correlog2 <- mantel.correlog(mite.hel.D, XY=mite.xy, cutoff=FALSE, 
+   r.type="spearman", nperm=49)
 summary(mite.correlog2)
 mite.correlog2
 plot(mite.correlog2)
